deploy/sal-server/sal-server-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sal-server
  namespace: sal
  labels:
    app: sal
    env: production
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: sal
        env: production
    spec:
      containers:
      - image: macadmins/sal:3.3.10
        name: sal-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 512Mi
