deploy/sal-server/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: sal-ingress
    namespace: sal
    # if you use a different ingress controller or name, then change the ingress.class
    # below to your ingress controller specs.
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: sal.example.com
      http:
        paths:
          - backend:
              serviceName: sal-service
              servicePort: 8000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - sal.example.com
        secretName: name_of_your_tls_secret
